--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,8 +9,8 @@
             "server": "http://localhost:8080/BC230",
             "serverInstance": "BC230",
             "authentication": "Windows",
-            "startupObjectId": 50201,
-            "startupObjectType": "Page",
+            "startupObjectId": 50250,
+            "startupObjectType": "Report",
             "breakOnError": "All",
             "launchBrowser": true,
             "enableLongRunningSqlStatements": true,
