--- a/app.json
+++ b/app.json
@@ -16,6 +16,12 @@
       "publisher": "Microsoft",
       "name": "_Exclude_Bank Deposits",
       "version": "23.3.14876.15024"
+    },
+    {
+      "id": "db643212-b7fb-4dd4-b5a8-cb44ac714461",
+      "publisher": "Microsoft",
+      "name": "India GST",
+      "version": "23.3.14876.15024"
     }
   ],
   "screenshots": [],
